--- a/punto_venta/punto_venta.csproj
+++ b/punto_venta/punto_venta.csproj
@@ -113,6 +113,12 @@
     <Compile Include="Form5.Designer.cs">
       <DependentUpon>Form5.cs</DependentUpon>
     </Compile>
+    <Compile Include="inventarioAdmin.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="inventarioAdmin.Designer.cs">
+      <DependentUpon>inventarioAdmin.cs</DependentUpon>
+    </Compile>
     <Compile Include="pag_empleados.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -135,6 +141,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Form5.resx">
       <DependentUpon>Form5.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="inventarioAdmin.resx">
+      <DependentUpon>inventarioAdmin.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="pag_empleados.resx">
       <DependentUpon>pag_empleados.cs</DependentUpon>
