primer intetno de ventana para añadir productos

--- a/punto_venta/punto_venta.csproj
+++ b/punto_venta/punto_venta.csproj
@@ -83,6 +83,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="add_prod.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="add_prod.Designer.cs">
+      <DependentUpon>add_prod.cs</DependentUpon>
+    </Compile>
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -127,6 +133,9 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="add_prod.resx">
+      <DependentUpon>add_prod.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
@@ -183,6 +192,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="logo.ico" />
+    <None Include="Resources\placeholder.png" />
     <None Include="Resources\icon_datos2.png" />
   </ItemGroup>
   <ItemGroup>
