--- a/punto_venta/punto_venta.csproj
+++ b/punto_venta/punto_venta.csproj
@@ -89,6 +89,7 @@
     <Compile Include="add_prod.Designer.cs">
       <DependentUpon>add_prod.cs</DependentUpon>
     </Compile>
+    <Compile Include="database.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -119,6 +120,7 @@
     <Compile Include="Form5.Designer.cs">
       <DependentUpon>Form5.cs</DependentUpon>
     </Compile>
+    <Compile Include="Inventario.cs" />
     <Compile Include="inventarioAdmin.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -131,8 +133,15 @@
     <Compile Include="pag_empleados.Designer.cs">
       <DependentUpon>pag_empleados.cs</DependentUpon>
     </Compile>
+    <Compile Include="Producto.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="pruebaDataBase.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="pruebaDataBase.Designer.cs">
+      <DependentUpon>pruebaDataBase.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="add_prod.resx">
       <DependentUpon>add_prod.cs</DependentUpon>
     </EmbeddedResource>
@@ -167,6 +176,9 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="pruebaDataBase.resx">
+      <DependentUpon>pruebaDataBase.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
