--- a/punto_venta/punto_venta.csproj
+++ b/punto_venta/punto_venta.csproj
@@ -90,6 +90,12 @@
       <DependentUpon>add_prod.cs</DependentUpon>
     </Compile>
     <Compile Include="database.cs" />
+    <Compile Include="Eliminar producto.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Eliminar producto.Designer.cs">
+      <DependentUpon>Eliminar producto.cs</DependentUpon>
+    </Compile>
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -144,6 +150,9 @@
     </Compile>
     <EmbeddedResource Include="add_prod.resx">
       <DependentUpon>add_prod.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Eliminar producto.resx">
+      <DependentUpon>Eliminar producto.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
@@ -204,6 +213,8 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="logo.ico" />
+    <None Include="Resources\delete_product.png" />
+    <None Include="Resources\refresh.png" />
     <None Include="Resources\placeholder.png" />
     <None Include="Resources\icon_datos2.png" />
   </ItemGroup>
