--- a/punto_venta/punto_venta.csproj
+++ b/punto_venta/punto_venta.csproj
@@ -214,6 +214,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="logo.ico" />
+    <None Include="Resources\235-2351000_login-icon-png-transparent-png.png" />
     <None Include="Resources\delete_product.png" />
     <None Include="Resources\refresh.png" />
     <None Include="Resources\placeholder.png" />
